<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, GetRadioActivity!</string>
    <string name="app_name">StreamGetter Pro Beta</string>
    <string name="play_explain">Playback selected radio </string>
    <string name="rec_explain">Record selected radio to external storage</string>
    <string name="rec_and_play_explain">Record selected radio to external storage and playback current track</string>
    <string name="showExp">Show help</string>
    <string name="playButton">Play</string>
    <string name="recButton">Rec</string>
    <string name="play_recButton">Play and Rec</string>
    <string name="genre">Genre</string>
    <string name="bitRate">BitRate</string>
    <string name="site">Site</string>
    <string name="saveTo">Saving to</string>
    <string name="status">Status: </string>
    <string name="addFav">Add station to favorites</string>
    <string name="noTitle">NoTitle</string>
    <string name="limitMessage">Track limit for exceeded, delete files in Manage</string>
    <string name="helpPlay">play selected stream</string>
    <string name="helpPR">play and save selected stream for offline</string>
    <string name="helpSave">save selected stream for offline</string>
    <string name="helpStop">stop playing and saving</string>
    <string name="statusRec">recording</string>
    <string name="statusPlay">playing</string>
    <string name="statusBuf">buffering</string>
    <string name="statusStop">stopped</string>
    <string name="statusError">error</string>
    <string name="systemEvent">systemevent</string>
    <string name="statusPR">playing and recording</string>
    <string name="statusConnecting">connecting</string>
    <string name="statusConnected">connected</string>
    <string name="statusPre">preview</string>
    <string name="statusPreFail">preview failed</string>
    <string name="statusRecconect">trying to recconect</string>
    <string name="mute">Mute</string>
    <string name="stopped">stopped</string>
    <string name="countSaveButton">Offline rec</string>
    <string name="countSaveHelp">Tracks limit</string>
    <string name="countSaveMessage">Tracks limit</string>
    <string name="selectStation">Select station</string>
    <string name="justPlaying">Just Playing</string>
    <string name="reconnect">connection attempt:</string>
    <string name="reconnectFail">reconnection failed</string>
    <string name="manage">Manage</string>
    <string name="random">Random station selected</string>
    <string name="noLicense">Apllication corrupt</string>
    <string name="libUpdate">Update media library?</string>
    <string name="updLib">Library update</string>
    <string name="cancel">Cancel</string>
    <string name="thanks">Thank you for using Stream Getter!</string>
    <string name="buyTitle">Want to buy?</string>
    <string name="buyMessage">If you like this application, you can buy it!</string>
    <string name="alreadyFav">Already in Favorites</string>
    <string name="recFilesTitle">Recorded files</string>
    <string name="noRecordedFiles">no recorded files</string>
    <string name="settings">Settings</string>
    <string name="addedToFav">Station was added to favorites</string>
    <string name="volume">Volume</string>
    <string name="freeSpace">Free space</string>
    <string name="lowSpace">Not enought free space on external storage!</string>
    <string name="helpGUI">Let me show you how this interface works</string>
    <string name="helpGUIEnd">Demostranion is over, use touchscreen for more options</string>
    <string name="noLimitSave">no limit</string>
    <string name="moveToAccept">move files to accepted folder</string>
    <string name="moveComplete">Files was moved succesfully</string>
    <string name="moveHelp">Move files to directory\n &#8230;/Stream Getter/approved/</string>
    <string name="recorded">saved</string>
    <string name="piracyBad">Ok, I will buy it</string>
    <string name="piracyOk">I dont care</string>
    <string name="thanks">Thank you! :)</string>
    <string name="updateStationBaseFail">Station database wasnt updated</string>
    <string name="updatedStationBase">Station database updated succesfully</string>
    <string name="cutByTracks">Cut by tracks</string>
    <string name="loadImage">Load images</string>
    <string name="saveCurrent">Track will be stored</string>
    <string name="saveCurrentCancel">Track will not be stored</string>
    <string name="options">Options</string>
    <string name="details">Details</string>
    <string name="genres">Genres</string>
    <string name="records">Records</string>
    <string name="showHelpButtons">Hide buttons on top</string>
    <string name="rateMe">Rate me!</string>
    <string name="librefresh">Refresh library</string>
    <string name="setSaveCount">Save count</string>
    <string name="help">Help</string>
    <string name="alreadyRec">Recording already in progress</string>
    <string name="saveCurrentUnavailable">Available with playback only</string>
    <string name="trackRecorded">track stored</string>
     <string name="addStation">Add station</string>
     <string name="urlStationText">Stream url (only mp3 streams)</string>
     <string name="newStationNameText">Station name</string>
      <string name="back">Close</string>

</resources>